--- a/index.html
+++ b/index.html
@@ -18,14 +18,28 @@
         <div class="clientes"><div id="img2"></div></div>
         <div class="clientes"><div id="img3"></div></div>
         <div class="clientes"><div id="img4"></div></div>
+        <div class="clientes"><div id="img5"></div></div>
+        <div class="clientes"><div id="img6"></div></div>
     </div>
     <!--Criação da div sobre nós-->
-    <div>
-
-    </div>
-    <!--Criação da div rodapé-->
-    <div>
-
+    <div id="rodape">
+        <!--Div sobre a empresa-->
+        <div id="textRodape">
+            <h1 id="about">Sobre nós</h1>
+            <p id="textAbout"> Proporcionar experiências
+                gastronômicas memoráveis, oferecendo<br>
+                hambúrgueres artesanais, vegetarianos e
+                veganoes de alta qualidade, preparados com<br>
+                ingredientes frescos e saborosos, enquanto
+                mantemos um ambiente acolhedor e um serviço<br>
+                de qualidade.<br><br>
+                Buscamos o reconhecimento na região<br>
+                pela excelência do nosso trabalho e pela
+                qualidade superior dos nossos produtos,<br>
+                sempre inovando em sabores para superar as
+                expectativas dos nossos clientes</p>
+        </div>
+        <div id="divMapa"><iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1828.7711581490457!2d-46.69846801507255!3d-23.548958474065845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57c7cb16ff49%3A0x73eea79ae3778e4f!2sRua%20Carop%C3%A1%2C%20659%20-%20Vila%20Madalena%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005447-000!5e0!3m2!1spt-BR!2sbr!4v1712927329763!5m2!1spt-BR!2sbr" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>  
     </div>
 </body>
 </html>
