--- a/index.html
+++ b/index.html
@@ -1,45 +1,126 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Life Fitness</title>
-</head>
-<body>
-    <!--Criação da div do topo do site-->
-    <div id="topo">
-        
-    </div>
-    <!--Criação da div de conteúdo do site-->
-    <div id="conteudo">
-        <p id="textTopo">Nosso Cardápio</p>
-        <div class="clientes"><div id="img1"><div></div></div></div>
-        <div class="clientes"><div id="img2"></div></div>
-        <div class="clientes"><div id="img3"></div></div>
-        <div class="clientes"><div id="img4"></div></div>
-        <div class="clientes"><div id="img5"></div></div>
-        <div class="clientes"><div id="img6"></div></div>
-    </div>
-    <!--Criação da div sobre nós-->
-    <div id="rodape">
-        <!--Div sobre a empresa-->
-        <div id="textRodape">
-            <h1 id="about">Sobre nós</h1>
-            <p id="textAbout"> Proporcionar experiências
-                gastronômicas memoráveis, oferecendo<br>
-                hambúrgueres artesanais, vegetarianos e
-                veganoes de alta qualidade, preparados com<br>
-                ingredientes frescos e saborosos, enquanto
-                mantemos um ambiente acolhedor e um serviço<br>
-                de qualidade.<br><br>
-                Buscamos o reconhecimento na região<br>
-                pela excelência do nosso trabalho e pela
-                qualidade superior dos nossos produtos,<br>
-                sempre inovando em sabores para superar as
-                expectativas dos nossos clientes</p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
+
+    <title>Brasa Burguer</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <main role="main">
+      <section class="jumbotron text-center">
+        <div class="container">
+          <h1 class="jumbotron-heading">Brasa Burguer</h1>
+          <p class="lead text-muted">Sabor na brasa, prazer na mordida!</p>
         </div>
-        <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1828.7711581490457!2d-46.69846801507255!3d-23.548958474065845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57c7cb16ff49%3A0x73eea79ae3778e4f!2sRua%20Carop%C3%A1%2C%20659%20-%20Vila%20Madalena%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005447-000!5e0!3m2!1spt-BR!2sbr!4v1712927329763!5m2!1spt-BR!2sbr" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-</body>
+      </section>
+
+      <div class="album py-5 bg-light">
+        <div class="container">
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img class="card-img-top" src="img/img1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img class="card-img-top" src="img/img2.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text"></p>
+                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img class="card-img-top" src="img/img3.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img class="card-img-top" src="img/img4.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img class="card-img-top" src="img/img5.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img class="card-img-top" src="img/img6.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </main>
+
+    <footer class="text-muted" style="padding: 10px;">
+      <div class="d-inline-flex">
+        <div class="container">
+          <h1 class="text-left">Sobre nós</h1>
+          <p class="text-left">Nossa missão é proporcionar experiências
+          gastronômicas memoráveis, oferecendo<br>
+          hambúrgueres artesanais, vegetarianos e
+          veganoes de alta qualidade, preparados<br> 
+          com ingredientes frescos e saborosos, enquanto
+          mantemos um ambiente <br> 
+          acolhedor e um serviço de qualidade.<br><br>
+          Buscamos o reconhecimento na região<br>
+          pela excelência do nosso trabalho e pela
+          qualidade superior dos nossos produtos,<br>
+          sempre inovando em sabores para superar as
+          expectativas dos nossos clientes</p>
+          <p class="float-right">
+          <a href="#">Voltar ao topo</a>
+        </p>
+        </div>
+        <div>
+          <iframe class="float-right" style="border-radius: 5%; margin-left: 70%;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6316727380754!2d-46.706862456194116!3d-23.545746506528406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57cefd76b41b%3A0xc5b7430419416f28!2sR.%20Nazar%C3%A9%20Paulista%2C%208-122%20-%20Vila%20Madalena%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005448-000!5e0!3m2!1spt-BR!2sbr!4v1713033714100!5m2!1spt-BR!2sbr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+  </body>
 </html>
