Alguns ajustes no site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,6 +15,7 @@
     <main role="main">
       <section class="jumbotron text-center">
         <div class="container">
+          <img class="rounded img-fluid" src="img/imagem1.jpg" style="width: 200px; height: 200px;" >
           <h1 class="jumbotron-heading">Brasa Burguer</h1>
           <p class="lead text-muted">Sabor na brasa, prazer na mordida!</p>
         </div>
@@ -28,7 +29,9 @@
               <div class="card mb-4 shadow-sm">
                 <img class="card-img-top" src="img/img1.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional.</p>
+                  <h3 class="text-left">Hamburguer Supremo</h3>
+                  <p class="card-text">Um verdadeiro deleite gastronômico, o Hambúrguer Supremo é uma combinação irresistível de carne grelhada suculenta, bacon crocante, queijo derretido e molho secreto exclusivo. Cada mordida é uma explosão de sabores harmoniosos e texturas contrastantes, desde a intensidade defumada do bacon até a cremosidade envolvente do queijo. Preparado com maestria e cuidado, este hambúrguer eleva a experiência culinária a novos patamares, prometendo satisfazer até os paladares mais exigentes com sua indulgência inigualável.</p>
+                  <h4 class="text-left" style="color: yellowgreen;">R$30</h4>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
@@ -38,8 +41,9 @@
               <div class="card mb-4 shadow-sm">
                 <img class="card-img-top" src="img/img2.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"></p>
-                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <h3 class="text-left">Hamburguer Verdejante</h3>
+                  <p class="card-text">Uma opção vegana irresistível, este hambúrguer combina uma suculenta carne à base de plantas com queijo vegano derretido, tomate fresco, alface crocante, picles e cebolas caramelizadas, tudo entre dois pães macios. Cada mordida oferece uma explosão de sabores e texturas cuidadosamente equilibrados, proporcionando uma experiência gastronômica gratificante e deliciosa, sem comprometer seus princípios éticos ou o sabor autêntico de um hambúrguer clássico.</p>
+                  <h4 class="text-left" style="color: yellowgreen;">R$35</h4>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
@@ -49,7 +53,9 @@
               <div class="card mb-4 shadow-sm">
                 <img class="card-img-top" src="img/img3.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <h3>Hamburguer Frango Supreme</h3>
+                  <p class="card-text">Uma ode à excelência culinária, este hambúrguer apresenta uma suculenta carne de frango grelhada, complementada por queijo derretido, cebola fresca, tomate maduro e alface crocante, tudo entre dois pães macios e levemente tostados. Cada mordida é uma explosão de sabores harmoniosos e texturas contrastantes, resultando em uma experiência gastronômica que combina perfeitamente o sabor autêntico do frango com a frescura dos vegetais.</p>
+                  <h4 class="text-left" style="color: yellowgreen;">R$32</h4>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
@@ -58,9 +64,11 @@
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" src="img/img4.jpg" alt="Card image cap">
+                <img class="card-img-top" src="img/img7.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <h3 class="text-left">Combo Duplo Delicia</h3>
+                  <p class="card-text">Este combo é uma festa para os amantes de hambúrguer, apresentando não uma, mas duas suculentas carnes grelhadas, queijo derretido, bacon crocante, cebola fresca, tomate maduro e alface crocante, tudo entre dois pães macios. Acompanhando o hambúrguer, uma porção média de batatas fritas temperadas e um refrigerante de 500ml garantem uma experiência completa e satisfatória. Prepare-se para uma explosão de sabores e uma refeição memorável com o Combo Duplo Delícia.</p>
+                  <h4 class="text-left" style="color: yellowgreen;">R$55</h4>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
@@ -70,7 +78,9 @@
               <div class="card mb-4 shadow-sm">
                 <img class="card-img-top" src="img/img5.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <h3 class="text-left">Hamburguer Cookie Delight</h3>
+                  <p class="card-text">Este doce em formato de hambúrguer apresenta duas cookies macias como buns, entre as quais se encontra uma camada de sorvete cremoso. Dentro deste saboroso sanduíche de sobremesa, barras de chocolate derretido adicionam um toque indulgente. O conjunto é finalizado com uma generosa drizzle de calda de caramelo, garantindo uma experiência de sobremesa decadente e deliciosa.</p>
+                  <h4 class="text-left" style="color: yellowgreen;">R$30</h4>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
@@ -80,7 +90,9 @@
               <div class="card mb-4 shadow-sm">
                 <img class="card-img-top" src="img/img6.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Este é um card maior e que suporta texto abaixo, como uma introdução mais natural ao conteúdo adicional. No entanto, esse conteúdo é um pouco maior.</p>
+                  <h3 class="text-left">Brownie Bliss Burguer</h3>
+                  <p class="card-text">Este delicioso doce é uma interpretação criativa do hambúrguer, com dois brownies macios e decadentes como "buns", entre os quais é colocado sorvete cremoso. Cada mordida oferece uma combinação perfeita de texturas e sabores, com o sorvete derretendo sobre os brownies e sendo complementado por uma generosa drizzle de calda de chocolate. O Brownie Bliss Burger é uma indulgência irresistível que satisfará os amantes de sobremesas mais exigentes.</p>
+                  <h4 class="text-left" style="color: yellowgreen;">R$35</h4>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
@@ -93,10 +105,11 @@
     </main>
 
     <footer class="text-muted" style="padding: 10px;">
-      <div class="d-inline-flex">
+      <div class="d-xl-inline-flex">
         <div class="container">
           <h1 class="text-left">Sobre nós</h1>
-          <p class="text-left">Nossa missão é proporcionar experiências
+          <p class="text-left"><br>
+            Nossa missão é proporcionar experiências
           gastronômicas memoráveis, oferecendo<br>
           hambúrgueres artesanais, vegetarianos e
           veganoes de alta qualidade, preparados<br> 
@@ -110,10 +123,32 @@
           expectativas dos nossos clientes</p>
           <p class="float-right">
           <a href="#">Voltar ao topo</a>
-        </p>
+          </p>
+        </div class="caixa bg-primary">
+        <div class="col-lg-5">
+          <iframe class="w-100 h-100 p-3 translucent-bg" style="border-radius: 5%; float: right;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6316727380754!2d-46.706862456194116!3d-23.545746506528406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57cefd76b41b%3A0xc5b7430419416f28!2sR.%20Nazar%C3%A9%20Paulista%2C%208-122%20-%20Vila%20Madalena%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005448-000!5e0!3m2!1spt-BR!2sbr!4v1713033714100!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div>
-          <iframe class="float-right" style="border-radius: 5%; margin-left: 70%;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6316727380754!2d-46.706862456194116!3d-23.545746506528406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57cefd76b41b%3A0xc5b7430419416f28!2sR.%20Nazar%C3%A9%20Paulista%2C%208-122%20-%20Vila%20Madalena%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005448-000!5e0!3m2!1spt-BR!2sbr!4v1713033714100!5m2!1spt-BR!2sbr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="container">
+          <h3 class="text-left">Contate nos</h3>
+          <form>
+            <div class="form-group">
+              <label for="nome">Nome Completo</label>
+              <input type="text" class="form-control" placeholder="Escreva seu nome">
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" placeholder="Escreva seu email">
+            </div>
+            <div class="form-group">
+              <label for="telefone">Telefone</label>
+              <input type="tel" class="form-control" placeholder="Escreva seu telefone">
+            </div>
+            <div class="form-group">
+              <label for="desc">Descrição</label>
+              <textarea class="form-control" rows="5"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
         </div>
       </div>
     </footer>
